--- a/index.html.html
+++ b/index.html.html
@@ -11,15 +11,14 @@
     <link rel="stylesheet" href="stileee/stylee.css">
     <script src="https://kit.fontawesome.com/6f94f69e77.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    </script>
+    
     <script type="text/javascript" src="magg.js">
     </script>
     <title>Conectate!</title>
 </head>
 <a href="https://api.whatsapp.com/send?phone=573012578319" class="btn-wsp" target="_blank"><i class="fa fa-whatsapp icono"></i></a>
 
-<body>
-    <h6>YO SOY </h6>
+<body
     <H1>TIGO HOGAR</H1>
     <div>
         <p>¡Para que siempre estes conectado! </p>
