index.html.html

--- a/index.html.html
+++ b/index.html.html
@@ -17,7 +17,7 @@
     <title>Conectate!</title>
 </head>
 
-    <header><H1>TIGO HOGAR</H1> </header>
+    <header><nav><H1>TIGO HOGAR</H1> </nav></header>
     <H1>TIGO HOGAR</H1>
     <div>
         <p>¡Para que siempre estes conectado! </p>
