index.html.html

--- a/index.html.html
+++ b/index.html.html
@@ -16,9 +16,10 @@
     </script>
     <title>Conectate!</title>
 </head>  
-    <H1>TIGO HOGAR</H1>
+    <body>
+    <H1>¡Para que siempre estes conectado!</H1>
     <div>
-        <p>¡Para que siempre estes conectado! </p>
+        <p>TIGO HOGAR </p>
 
 <br><br>
         <h2> HOGAR </h2>
