index.html.html

--- a/index.html.html
+++ b/index.html.html
@@ -17,9 +17,9 @@
     <title>Conectate!</title>
 </head>  
     <body>
-    <H1>¡Para que siempre estes conectado!</H1>
+   
     <div>
-        <p>TIGO HOGAR </p>
+        <H2>TIGO HOGAR </H2>
 
 <br><br>
         <h2> HOGAR </h2>
