index.html.html

--- a/index.html.html
+++ b/index.html.html
@@ -26,8 +26,8 @@
 
         <img src="images/publi tigooo.jpg" width="230px">
 
-        <div class="contactame">
-            <h5> <big>Concactame por WhatsApp</big> </h5>
+        
+            <h5> Concactame por WhatsApp </h5>
         </div><br>
         <h4>Te Comunico con un Asesor <br>TIGO HOGAR</h4>
         <a href="https://api.whatsapp.com/send?phone=573012578319" class="btn-wsp" target="_blank">
